fixed css alignment and adjusted navbar. almost got the menus working (#22)

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -18,3 +18,52 @@ body {
 body {
   background-color: #eae4dc;
 }
+
+h1 {
+  font-size: 3.5rem;
+  line-height: 2.5rem;
+  padding-top: 2rem;
+  padding-bottom: 0rem;
+  margin: 0;
+}
+
+h3 {
+  padding-top: 0;
+  padding-bottom: 1rem;
+  margin: 0;
+}
+
+input {
+  border: solid 0.25rem #f97c00;
+  margin: 0.5rem;
+  padding: 0.3rem;
+}
+
+input:focus {
+  outline: solid 1px #3a3a3a;
+}
+
+input {
+  width: 10rem;
+  border: solid 0.25rem #f97c00;
+  margin: 0.5rem;
+  padding: 0.3rem;
+}
+
+button {
+  width: 5rem;
+  font-family: 'Fira Sans Extra Condensed', sans-serif;
+  font-weight: 700;
+  color: #3a3a3a;
+  background-color: #f97c00;
+  border: none;
+  padding: 0.55rem;
+}
+
+button:hover {
+  background-color: #ff9f3e;
+}
+
+button:active {
+  background-color: #f97c00;
+}
